dnl Process this file with autoconf to produce a configure script.
dnl
dnl aclocal_cache.m4, included by sowing/confdb/aclocal.m4, fixes 
dnl bugs in autoconf caching.
dnl
dnl The file name here refers to a file in the source being configured
AC_INIT(ldap_nameserv.c)
dnl
dnl Definitions will be placed in this file rather than in the DEFS variable
AC_CONFIG_HEADER(ldapnameservconf.h)
dnl
dnl Set the directory that contains support scripts such as install-sh and
dnl config.guess
AC_CONFIG_AUX_DIR(../../../confdb)
dnl
echo "RUNNING CONFIGURE FOR THE LDAP NAMESERVER"

# Look for ldap libraries and header files
AC_CHECK_HEADERS(lber.h ldap.h)
have_ldap_lib=no
AC_SEARCH_LIBS(ldap_open,ldap,have_ldap_lib=yes)
# If we have the headers and the library, then we can specify
# ldap
if test "$ac_cv_header_lber_h" = yes -a \
        "$ac_cv_header_ldap_h" = yes -a \
	"$have_ldap_lib" = yes ; then
	:
else 
    AC_MSG_WARN([Could not find files needed to use LDAP for name publishing])
fi
AC_OUTPUT(Makefile)
